# faq-rag-json

./: Dockerfile  README.md  app.py  context.txt  data.json  data_types.py  docker-compose.yml  main.ipynb  nginx.conf  pyproject.toml  qa.py  requirements.txt  sample.json  test.py
