[tool.poetry]
name = "yantra"
version = "0.1.0"
description = ""
authors = ["sidhant-sriv <sidhant.sriv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.3.14"
jq = "^1.8.0"
supabase = "^2.11.0"
pydantic = "^2.10.5"
langchain-community = "^0.3.14"
langchain-text-splitters = "^0.3.5"
langchain-cohere = "^0.3.4"
langchain-groq = "^0.2.3"
rank-bm25 = "^0.2.2"
flask = "^3.1.0"
asgiref = "^3.8.1"
gunicorn = "^23.0.0"
flask-cors = "^5.0.0"
redis = "^5.2.1"
rapidfuzz = "^3.11.0"
nltk = "^3.9.1"
flask-limiter = "^3.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
